--- a/plotter/templates/index.html
+++ b/plotter/templates/index.html
@@ -3,18 +3,15 @@
 {% block content %}
 
  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Dashboard</h1>
+          <h1 class="page-header">Sensor Plots</h1>
 
-          <div class="row placeholders">
-           <div class="col-xs-6 col-sm-3 placeholder">
-						 {% for plot in plots %}
-              {{ plot.code|safe }}
-						 {% endfor %}
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-          </div>
-
-       </div>
+<div class="row">
+  <div class="col-xs-9 col-md-3">
+	{% for plot in plots %}
+      {{ plot.code|safe }}
+	{% endfor %}
+  </div>
+</div>
+</div>
 
 {% endblock %}
