--- a/plotter/templates/base.html
+++ b/plotter/templates/base.html
@@ -49,9 +49,7 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Analytics</a></li>
-            <li><a href="#">Export</a></li>
+            <li><a href="#">Menu 1</a></li>
           </ul>
         </div>
        
